fixing center align text

--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ body {
   height: 100%;
   padding: 20px;
   background-color: black;
+  display: flex;
+  align-items: center;
 }
 #forth_section h1 {
   font-size: 40vw;
